force-app/main/default/objects/PAG_Persona_History__c.object
<CustomObject>
    <fields>
        <fullName>PAG_Context__c</fullName>
        <label>Context</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAG_IdempotencyKey__c</fullName>
        <label>Idempotency Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_MessageType__c</fullName>
        <label>Message Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_OccurredAt__c</fullName>
        <label>Occurred At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona (Current)</label>
        <referenceTo>PAG_Persona__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAG_Producer__c</fullName>
        <label>Producer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_RawJson__c</fullName>
        <label>Raw JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAG_Reason__c</fullName>
        <label>Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_RecordedAt__c</fullName>
        <label>Recorded At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_RuleId__c</fullName>
        <label>Rule Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Sequence__c</fullName>
        <label>SoR Sequence</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SoR__c</fullName>
        <label>System of Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAG_State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SubType__c</fullName>
        <label>SubType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Persona History</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persona History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>